client:fixed global styles, added error handling on login

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -4,14 +4,16 @@ html,
 body {
   height: 100%;
 }
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
 .dialog-box {
   display: flex;
   flex-direction: column;
-  padding-left: 40%;
-  padding-top: 40vh;
-  width: 40vh;
+  padding-left: 35%;
+  padding-top: 10%;
+  width: 30%;
 }
