created auth handler to avoid code duplicating

--- a/client/src/app/core/login/login.component.html
+++ b/client/src/app/core/login/login.component.html
@@ -1,14 +1,14 @@
 <div class="login dialog-box">
   <mat-form-field>
     <mat-label>Username</mat-label>
-    <input matInput [(ngModel)]="username" />
+    <input matInput [(ngModel)]="dto.username" />
   </mat-form-field>
   <mat-form-field>
     <mat-label>Password</mat-label>
     <input
       matInput
       [type]="hidePassword() ? 'password' : 'text'"
-      [(ngModel)]="password"
+      [(ngModel)]="dto.password"
     />
     <button
       mat-icon-button
@@ -22,16 +22,9 @@
       }}</mat-icon>
     </button>
   </mat-form-field>
-  <div>
-    <button
-      mat-button
-      style="width: 40%"
-      disabled="{{ !areFieldsValid() }}"
-      (click)="onSubmitClick()"
-    >
-      Submit
-    </button>
-  </div>
-  <span>Don`t have an account yet?</span>
-  <button rout mat-button routerLink="/register">Register</button>
+  <app-auth-handler
+    [isLogin]="true"
+    [areFieldsValid]="areFieldsValid()"
+    [dto]="dto"
+  />
 </div>
