--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,10 +3,12 @@
 html,
 body {
   height: 100%;
+  margin: 0;
 }
 
 body {
-  margin: 0;
+  margin-left: 5%;
+  margin-right: 5%;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
