client: small changes

--- a/client/src/app/core/initial/initial.component.html
+++ b/client/src/app/core/initial/initial.component.html
@@ -2,7 +2,7 @@
   @if (authService.user$ | async; as user) {
   <div>
     <span>Username: {{ user.username }} </span>
-    <span>Roles: {{ user.roles?.join(", ") }}</span>
+    <span>Roles: {{ user.roles.join(", ") }}</span>
   </div>
   } @else {
   <div>
