--- a/client/src/app/core/admin-panel/admin-panel.component.html
+++ b/client/src/app/core/admin-panel/admin-panel.component.html
@@ -1,10 +1,30 @@
 <div class="panel container">
   <div>
     <mat-table
-      [dataSource]="(users$ | async) || []"
-      class="table mat-elevation-z8"
-    >
-      <ng-container matColumnDef="Username">
+      [dataSource]="(users$ | async) || [
+        {
+          id:'',
+          username:'username1',
+          firstName:'firstname1',
+          lastName:'lastName1',
+          phoneNumber:'phonenumber',
+          creationDate: date,
+          isBlocked:false,
+          roles:[]
+        },
+        {
+          id:'',
+          username:'userna2',
+          firstName:'string',
+          lastName:'string',
+          phoneNumber:'phonenumber',
+          creationDate: date,
+          isBlocked:false,
+          roles:[]
+        },
+        ]"
+      class="table"
+    >      <ng-container matColumnDef="Username">
         <th mat-header-cell mat-sort-header *matHeaderCellDef>Username</th>
         <td mat-cell *matCellDef="let element">{{ element.userName }}</td>
       </ng-container>
