--- a/client/src/app/core/admin-panel/admin-panel.component.html
+++ b/client/src/app/core/admin-panel/admin-panel.component.html
@@ -1,50 +1,213 @@
 <div class="panel container">
-  <div>
+  <div style="height: 90%">
     <mat-table
-      [dataSource]="(users$ | async) || [
-        {
-          id:'',
-          username:'username1',
-          firstName:'firstname1',
-          lastName:'lastName1',
-          phoneNumber:'phonenumber',
-          creationDate: date,
-          isBlocked:false,
-          roles:[]
-        },
-        {
-          id:'',
-          username:'userna2',
-          firstName:'string',
-          lastName:'string',
-          phoneNumber:'phonenumber',
-          creationDate: date,
-          isBlocked:false,
-          roles:[]
-        },
-        ]"
-      class="table"
-    >      <ng-container matColumnDef="Username">
+      [fixedLayout]="true"
+      [dataSource]="
+        (users$ | async) || [
+          {
+            id: '',
+            username: 'username1',
+            firstName: 'firstname1',
+            lastName: 'lastName1',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'userna2',
+            firstName: 'string',
+            lastName: 'string',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'username1',
+            firstName: 'firstname1',
+            lastName: 'lastName1',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'userna2',
+            firstName: 'string',
+            lastName: 'string',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'username1',
+            firstName: 'firstname1',
+            lastName: 'lastName1',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'userna2',
+            firstName: 'string',
+            lastName: 'string',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'username1',
+            firstName: 'firstname1',
+            lastName: 'lastName1',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'userna2',
+            firstName: 'string',
+            lastName: 'string',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'username1',
+            firstName: 'firstname1',
+            lastName: 'lastName1',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'userna2',
+            firstName: 'string',
+            lastName: 'string',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'username1',
+            firstName: 'firstname1',
+            lastName: 'lastName1',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'userna2',
+            firstName: 'string',
+            lastName: 'string',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'username1',
+            firstName: 'firstname1',
+            lastName: 'lastName1',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'userna2',
+            firstName: 'string',
+            lastName: 'string',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'username1',
+            firstName: 'firstname1',
+            lastName: 'lastName1',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'userna2',
+            firstName: 'string',
+            lastName: 'string',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'username1',
+            firstName: 'firstname1',
+            lastName: 'lastName1',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          },
+          {
+            id: '',
+            username: 'userna2',
+            firstName: 'string',
+            lastName: 'string',
+            phoneNumber: 'phonenumber',
+            creationDate: date,
+            isBlocked: false,
+            roles: []
+          }
+        ]
+      "
+    >
+      <ng-container matColumnDef="username">
         <th mat-header-cell mat-sort-header *matHeaderCellDef>Username</th>
         <td mat-cell *matCellDef="let element">{{ element.userName }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="First name">
+      <ng-container matColumnDef="firstName">
         <th mat-header-cell mat-sort-header *matHeaderCellDef>First name</th>
         <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="Last name">
+      <ng-container matColumnDef="lastName">
         <th mat-header-cell mat-sort-header *matHeaderCellDef>Last name</th>
         <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="Phone number">
+      <ng-container matColumnDef="phoneNumber">
         <th mat-header-cell *matHeaderCellDef>Phone number</th>
         <td mat-cell *matCellDef="let element">{{ element.phoneNumber }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="Registration date">
+      <ng-container matColumnDef="registrationDate">
         <th mat-header-cell mat-sort-header *matHeaderCellDef>
           Registration date
         </th>
@@ -53,30 +216,31 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="Roles">
+      <ng-container matColumnDef="roles">
         <th mat-header-cell *matHeaderCellDef>Roles</th>
         <td mat-cell *matCellDef="let element">{{ element.roles }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="Is Blocked">
+      <ng-container matColumnDef="blocked">
         <th mat-header-cell *matHeaderCellDef>Blocked</th>
         <td mat-cell *matCellDef="let element">{{ element.isBloked }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="Actions">
+      <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let element">
-          <button mat-fab><mat-icon>delete</mat-icon></button>
+          <button mat-mini-fab><mat-icon>delete</mat-icon></button>
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </mat-table>
 
     <mat-paginator
       [pageSizeOptions]="[5, 10, 25, 100]"
       aria-label="Select page of users"
+      class="paginator"
     ></mat-paginator>
   </div>
   <div></div>
