--- a/client/src/app/core/admin-panel/admin-panel.component.scss
+++ b/client/src/app/core/admin-panel/admin-panel.component.scss
@@ -1,21 +1,23 @@
 .panel {
-  display: flex;
   padding-top: 4%;
-  .table {
-    width: 60%;
+  height: 100%;
+
+  .mat-mdc-table {
+    width: 100%;
+    height: 70%;
     overflow: auto;
-    .mat-mdc-row .mat-mdc-cell {
-      border-bottom: 1px solid transparent;
-      border-top: 1px solid transparent;
-      cursor: pointer;
-    }
+    // display: block;
 
-    .mat-mdc-row:hover .mat-mdc-cell {
-      border-color: currentColor;
+    .mat-mdc-header-row,
+    .mat-mdc-row,
+    .mat-mdc-footer-row {
+      display: table;
+      width: 100%;
+      table-layout: fixed;
     }
+  }
 
-    .demo-row-is-clicked {
-      font-weight: bold;
-    }
+  .paginator {
+    height: 10%;
   }
 }
