--- a/client/src/app/core/admin-panel/admin-panel.component.html
+++ b/client/src/app/core/admin-panel/admin-panel.component.html
@@ -223,13 +223,16 @@
 
       <ng-container matColumnDef="blocked">
         <th mat-header-cell *matHeaderCellDef>Blocked</th>
-        <td mat-cell *matCellDef="let element">{{ element.isBloked }}</td>
+        <td mat-cell *matCellDef="let element">
+          <mat-slide-toggle #toggle [checked]="options.isBLocked" (toggleChange)="updateQuery({isBlocked:toggle.checked})"></mat-slide-toggle>
+
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let element">
-          <button mat-mini-fab><mat-icon>delete</mat-icon></button>
+          <button mat-mini-fab (click)="deleteUser(element.id)"><mat-icon>delete</mat-icon></button>
         </td>
       </ng-container>
 
