--- a/client/src/app/core/admin-panel/admin-panel.component.html
+++ b/client/src/app/core/admin-panel/admin-panel.component.html
@@ -1,5 +1,67 @@
 <div class="panel container">
   <div style="height: 90%">
+    <div class="filters-container">
+      <mat-form-field appearance="outline">
+        <mat-label>UserName filter</mat-label>
+        <input matInput [(ngModel)]="partialUserNameInput" />
+        @if (partialUserNameInput) {
+        <button matSuffix mat-icon-button (click)="clearPartialUsername()">
+          <mat-icon>close</mat-icon>
+        </button>
+        }
+        <button
+          matSuffix
+          mat-icon-button
+          (click)="updateQuery({ partialUserName: partialUserNameInput })"
+        >
+          <mat-icon>search</mat-icon>
+        </button>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="date-range-picker">
+        <mat-label>Enter a date range</mat-label>
+        <mat-date-range-input [rangePicker]="picker" [formGroup]="range">
+          <input
+            formControlName="start"
+            matStartDate
+            placeholder="Start date"
+            readonly
+            (dateChange)="updateQuery({ startDate: range.value.start! })"
+          />
+          <input
+            formControlName="end"
+            matEndDate
+            placeholder="End date"
+            readonly
+            (dateChange)="updateQuery({ endDate: range.value.start! })"
+          />
+        </mat-date-range-input>
+        <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
+        @if (options.startDate || options.endDate) {
+        <button matIconSuffix mat-icon-button (click)="clearDate()">
+          <mat-icon>close</mat-icon>
+        </button>
+        }
+        <mat-datepicker-toggle
+          matIconSuffix
+          [for]="picker"
+        ></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+      </mat-form-field>
+      <div class="roles-fields">
+        <mat-form-field appearance="outline">
+          <mat-label>Roles</mat-label>
+          <input matInput />
+          <button mat-icon-button matSuffix><mat-icon>close</mat-icon></button>
+        </mat-form-field>
+        @for (role of filterRolesInput; track $index) {
+        <mat-form-field appearance="outline" class="additional-role-input">
+          <input matInput />
+          <button mat-icon-button matSuffix><mat-icon>close</mat-icon></button>
+        </mat-form-field>
+        }
+      </div>
+    </div>
     <mat-table
       [fixedLayout]="true"
       [dataSource]="(result$ | async)?.items || []"
@@ -7,7 +69,7 @@
       (matSortChange)="onSortChange($event)"
     >
       <ng-container matColumnDef="userName">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef>Username</th>
+        <th mat-header-cell mat-sort-header *matHeaderCellDef>UserName</th>
         <td mat-cell *matCellDef="let element">{{ element.userName }}</td>
       </ng-container>
 
