--- a/client/src/app/core/admin-panel/admin-panel.component.scss
+++ b/client/src/app/core/admin-panel/admin-panel.component.scss
@@ -1,7 +1,22 @@
 .panel {
   padding-top: 4%;
   height: 100%;
+  .filters-container {
+    height: 40%;
+    max-height: 40%;
+    display: flex;
+    column-gap: 2%;
 
+    .date-range-picker {
+      min-width: 20%;
+    }
+
+    .roles-fields {
+      display: flex;
+      flex-direction: column;
+      overflow: auto;
+    }
+  }
   .mat-mdc-table {
     width: 100%;
     height: 70%;
@@ -13,6 +28,10 @@
       display: table;
       width: 100%;
       table-layout: fixed;
+    }
+
+    .mat-mdc-header-cell {
+      vertical-align: middle;
     }
   }
 
