fixed username to userName

--- a/client/src/app/core/initial/initial.component.html
+++ b/client/src/app/core/initial/initial.component.html
@@ -1,7 +1,7 @@
 <div class="initial dialog-box">
   @if (authService.user$ | async; as user) {
   <div>
-    <span>Username: {{ user.username }} </span>
+    <span>UserName: {{ user.userName }} </span>
     <span>Roles: {{ user.roles.join(", ") }}</span>
   </div>
   } @else {
