--- a/client/src/app/core/login/login.component.html
+++ b/client/src/app/core/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login dialog-box">
   <mat-form-field>
-    <mat-label>Username</mat-label>
-    <input matInput [(ngModel)]="dto.username" />
+    <mat-label>UserName</mat-label>
+    <input matInput [(ngModel)]="dto.userName" />
   </mat-form-field>
   <mat-form-field>
     <mat-label>Password</mat-label>
