--- a/client/src/app/core/register/register.component.html
+++ b/client/src/app/core/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="register dialog-box">
   <mat-form-field>
-    <mat-label>Username</mat-label>
-    <input matInput [(ngModel)]="dto.username" required />
+    <mat-label>UserName</mat-label>
+    <input matInput [(ngModel)]="dto.userName" required />
   </mat-form-field>
   <mat-form-field>
     <mat-label>Full name</mat-label>
