--- a/client/src/app/core/admin-panel/admin-panel.component.html
+++ b/client/src/app/core/admin-panel/admin-panel.component.html
@@ -99,7 +99,11 @@
 
       <ng-container matColumnDef="roles">
         <th mat-header-cell *matHeaderCellDef>Roles</th>
-        <td mat-cell *matCellDef="let element">{{ element.roles }}</td>
+        <td mat-cell *matCellDef="let element">
+          @for (roleName of showRoleNames(element.roles) ; track $index) {
+          <div>{{ roleName }}</div>
+          }
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="blocked">
