fixed fullname to first + last ones

--- a/client/src/app/core/register/register.component.html
+++ b/client/src/app/core/register/register.component.html
@@ -4,8 +4,12 @@
     <input matInput [(ngModel)]="dto.userName" required />
   </mat-form-field>
   <mat-form-field>
-    <mat-label>Full name</mat-label>
-    <input matInput [(ngModel)]="dto.fullName" required />
+    <mat-label>First name</mat-label>
+    <input matInput [(ngModel)]="dto.firstName" required />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Last name</mat-label>
+    <input matInput [(ngModel)]="dto.lastName" required />
   </mat-form-field>
   <mat-form-field>
     <mat-label>Phone number</mat-label>
