renamed data types, fixed some small problems, added deleting

--- a/client/src/app/core/admin-panel/admin-panel.component.scss
+++ b/client/src/app/core/admin-panel/admin-panel.component.scss
@@ -22,6 +22,7 @@
           overflow: auto;
           overflow-x: hidden;
         }
+      }
     }
   }
   .mat-mdc-table {
@@ -33,16 +34,28 @@
     .mat-mdc-row,
     .mat-mdc-footer-row {
       display: table;
+    .mat-mdc-table {
       width: 100%;
-      table-layout: fixed;
+      height: 70%;
+      overflow: auto;
+
+      .mat-mdc-header-row,
+      .mat-mdc-row,
+      .mat-mdc-footer-row {
+        display: table;
+        width: 100%;
+        table-layout: fixed;
+      }
+
+      .mat-mdc-header-cell,
+      .mat-mdc-cell {
+        vertical-align: middle;
+      }
     }
 
-    .mat-mdc-header-cell {
-      vertical-align: middle;
+    .paginator {
+      height: 10%;
     }
   }
-
-  .paginator {
-    height: 10%;
   }
 }
