--- a/client/src/app/core/admin-panel/admin-panel.component.html
+++ b/client/src/app/core/admin-panel/admin-panel.component.html
@@ -1,5 +1,5 @@
 <div class="panel container">
-  <div style="height: 90%">
+  <div class="table">
     <div class="filters-container">
       <mat-form-field appearance="outline">
         <mat-label>UserName filter</mat-label>
@@ -99,6 +99,27 @@
       matSort
       (matSortChange)="onSortChange($event)"
     >
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          @if ((result$ | async)?.items; as users) {
+          <mat-checkbox
+            (change)="$event ? toggleAllRows(users) : null"
+            [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()"
+          >
+          </mat-checkbox>
+          }
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)"
+          >
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="userName">
         <th mat-header-cell mat-sort-header *matHeaderCellDef>UserName</th>
         <td mat-cell *matCellDef="let element">{{ element.userName }}</td>
@@ -151,7 +172,20 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let element">
-          <button mat-mini-fab (click)="deleteUser(element.id)">
+          <button
+            mat-mini-fab
+            style="margin: 6px"
+            (click)="
+              triggerRolesUpdateDialog(
+                element.userName,
+                element.roles,
+                element.id
+              )
+            "
+          >
+            <mat-icon>settings_accessibility</mat-icon>
+          </button>
+          <button mat-mini-fab (click)="triggerDeleteDialog(element.id)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
@@ -167,10 +201,26 @@
       [pageSizeOptions]="[5, 10, 25, 100]"
       aria-label="Select page"
       (page)="
-        updateQuery({ pageSize: $event.pageSize, pageIndex: $event.pageIndex })
+        updateQuery({
+          pageSize: $event.pageSize,
+          pageIndex: $event.pageIndex
+        })
       "
     ></mat-paginator>
   </div>
 
-  <div></div>
+  <div class="metrics">
+    @if (metrics$ | async; as metrics) {
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title> Metrics</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div>Admins: {{ metrics.adminCount }}</div>
+        <div>Blocked: {{ metrics.blockedCount }}</div>
+        <div>Total: {{ metrics.totalCount }}</div>
+      </mat-card-content>
+    </mat-card>
+    }
+  </div>
 </div>
