--- a/client/src/app/core/admin-panel/admin-panel.component.html
+++ b/client/src/app/core/admin-panel/admin-panel.component.html
@@ -163,8 +163,8 @@
         <td mat-cell *matCellDef="let element">
           <mat-slide-toggle
             #toggle
-            [checked]="options.isBlocked"
-            (toggleChange)="updateQuery({ isBlocked: toggle.checked })"
+            [checked]="element.isBlocked"
+            (toggleChange)="changeBlockStatus(element.id, !toggle.checked)"
           ></mat-slide-toggle>
         </td>
       </ng-container>
