--- a/client/src/app/core/admin-panel/admin-panel.component.scss
+++ b/client/src/app/core/admin-panel/admin-panel.component.scss
@@ -1,15 +1,24 @@
 .panel {
-  padding-top: 4%;
-  height: 100%;
-  .filters-container {
-    height: 40%;
-    max-height: 40%;
-    display: flex;
-    column-gap: 2%;
+  margin-top: 4%;
+  height: 95%;
+  display: grid;
+  grid-template-columns: 80fr 20fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  column-gap: 5px;
+  .table {
+    grid-row-start: 1;
+    grid-row-end: 4;
+    height: 100%;
+    .filters-container {
+      margin: 4px 0 0 6px;
+      height: 15%;
+      display: flex;
+      column-gap: 2%;
+      max-height: 20%;
+      > .mat-mdc-form-field {
+        height: 10%;
+      }
 
-    .date-range-picker {
-      min-width: 20%;
-    }
       .date-range-picker {
         min-width: 20%;
       }
@@ -24,16 +33,6 @@
         }
       }
     }
-  }
-  .mat-mdc-table {
-    width: 100%;
-    height: 70%;
-    overflow: auto;
-
-    .mat-mdc-header-row,
-    .mat-mdc-row,
-    .mat-mdc-footer-row {
-      display: table;
     .mat-mdc-table {
       width: 100%;
       height: 70%;
@@ -57,5 +56,7 @@
       height: 10%;
     }
   }
+  .metrics {
+    grid-row-start: 2;
   }
 }
