client: fixed some styles, added log out client handling

--- a/client/src/app/core/header-menu/header-menu.component.html
+++ b/client/src/app/core/header-menu/header-menu.component.html
@@ -1,7 +1,9 @@
 <mat-toolbar class="menu">
   <span>Todo List</span>
-  @if (currentUser$|async; as user;) { @if(isManager(user)){
+  @if (currentUser$|async; as user;) { @if(isManager(user) || isEmployee(user)){
   <button mat-button routerLink="/dashboard">Dashboard</button>
+  } @if(isAdmin(user)){
+  <button mat-button routerLink="/panel">Admin panel</button>
   } }
   <span class="spacer"></span>
   <button mat-icon-button>
@@ -12,6 +14,7 @@
   <button mat-flat-button [routerLink]="['/user', user.id]">
     {{ user.userName }}
   </button>
+  <button mat-flat-button (click)="logOut()">Log out</button>
   } @else {
   <button mat-flat-button routerLink="/login">LogIn</button>
   }
