--- a/client/src/app/core/login/login.component.html
+++ b/client/src/app/core/login/login.component.html
@@ -1,30 +1,32 @@
-<div class="login dialog-box">
-  <mat-form-field>
-    <mat-label>UserName</mat-label>
-    <input matInput [(ngModel)]="dto.userName" />
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label>Password</mat-label>
-    <input
-      matInput
-      [type]="hidePassword() ? 'password' : 'text'"
-      [(ngModel)]="dto.password"
+<div class="login">
+  <div class="dialog-box">
+    <mat-form-field>
+      <mat-label>UserName</mat-label>
+      <input matInput [(ngModel)]="dto.userName" />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Password</mat-label>
+      <input
+        matInput
+        [type]="hidePassword() ? 'password' : 'text'"
+        [(ngModel)]="dto.password"
+      />
+      <button
+        mat-icon-button
+        matSuffix
+        (click)="onPasswordVisibilityChanged($event)"
+        [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="hidePassword()"
+      >
+        <mat-icon>{{
+          hidePassword() ? "visibility_off" : "visibility"
+        }}</mat-icon>
+      </button>
+    </mat-form-field>
+    <app-auth-handler
+      [isLogin]="true"
+      [areFieldsValid]="areFieldsValid()"
+      [dto]="dto"
     />
-    <button
-      mat-icon-button
-      matSuffix
-      (click)="onPasswordVisibilityChanged($event)"
-      [attr.aria-label]="'Hide password'"
-      [attr.aria-pressed]="hidePassword()"
-    >
-      <mat-icon>{{
-        hidePassword() ? "visibility_off" : "visibility"
-      }}</mat-icon>
-    </button>
-  </mat-form-field>
-  <app-auth-handler
-    [isLogin]="true"
-    [areFieldsValid]="areFieldsValid()"
-    [dto]="dto"
-  />
+  </div>
 </div>
